Bionic reader html tag display bug fixed
Bionic reader would display html tags in epubs. That has been fixed.

--- a/bionic.html
+++ b/bionic.html
@@ -134,6 +134,9 @@
     <!-- External Libraries -->
     <script src="https://cdn.jsdelivr.net/npm/jszip@3/dist/jszip.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/epubjs/dist/epub.min.js"></script>
+    
+    <!-- DOMPurify for safe HTML sanitization -->
+    <script src="https://cdn.jsdelivr.net/npm/dompurify@3.3.0/dist/purify.min.js"></script>
 
     <!-- App Scripts -->
     <script src="ebook-reader.js"></script>
