--- a/bionic.html
+++ b/bionic.html
@@ -139,6 +139,7 @@
     <script src="https://cdn.jsdelivr.net/npm/dompurify@3.3.0/dist/purify.min.js"></script>
 
     <!-- App Scripts -->
+    <script src="ebook-reader-core.js"></script>
     <script src="ebook-reader.js"></script>
     <script src="epub-handler.js"></script>
     <script src="app.js"></script>
