--- a/bionic.html
+++ b/bionic.html
@@ -93,6 +93,10 @@
                             <optgroup label="Slab">
                                 <option value="robotoslab">Roboto Slab</option>
                             </optgroup>
+                            <optgroup label="Accessibility">
+                                <option value="lexend">Lexend (ADHD-friendly)</option>
+                                <option value="opendyslexic">OpenDyslexic (Dyslexia)</option>
+                            </optgroup>
                         </select>
                     </div>
                     <div class="control-group">
