--- a/bionic.html
+++ b/bionic.html
@@ -119,16 +119,35 @@
 
                 <div class="sidebar-section">
                     <h3>Theme</h3>
-                    <div class="btn-group">
-                        <button id="theme-light" class="active">Light</button>
-                        <button id="theme-dark">Dark</button>
+                    <div class="control-group">
+                        <label>Color Scheme</label>
+                        <select id="theme-select">
+                            <optgroup label="Light Themes">
+                                <option value="light" selected>Light</option>
+                                <option value="sepia">Sepia</option>
+                                <option value="gray">Gray</option>
+                                <option value="parchment">Parchment</option>
+                            </optgroup>
+                            <optgroup label="Dark Themes">
+                                <option value="dark">Dark</option>
+                                <option value="nord">Nord</option>
+                                <option value="dracula">Dracula</option>
+                                <option value="solarized">Solarized Dark</option>
+                                <option value="monokai">Monokai</option>
+                                <option value="ocean">Ocean Blue</option>
+                                <option value="forest">Forest</option>
+                            </optgroup>
+                            <optgroup label="Special">
+                                <option value="matrix">Matrix</option>
+                                <option value="terminal">Terminal Green</option>
+                            </optgroup>
+                        </select>
                     </div>
-                    <div class="btn-group">
-                        <button id="theme-sepia">Sepia</button>
-                        <button id="theme-gray">Gray</button>
-                    </div>
-                    <div class="btn-group">
-                        <button id="theme-auto">Auto</button>
+                    <div class="control-group">
+                        <label style="display: flex; align-items: center; gap: 8px;">
+                            <input type="checkbox" id="theme-auto">
+                            <span>Auto (System)</span>
+                        </label>
                     </div>
                 </div>
             </div>
