--- a/bionic.html
+++ b/bionic.html
@@ -103,6 +103,10 @@
                         <label>Font Size <span class="control-value" id="fontsize-value">18px</span></label>
                         <input type="range" id="fontsize-slider" min="12" max="48" value="18">
                     </div>
+                    <div class="control-group">
+                        <label>Line Height <span class="control-value" id="lineheight-value">1.7</span></label>
+                        <input type="range" id="lineheight-slider" min="1.0" max="3.0" step="0.1" value="1.7">
+                    </div>
                 </div>
 
                 <div class="sidebar-section">
