--- a/bionic.html
+++ b/bionic.html
@@ -42,116 +42,146 @@
         <div id="sidebar">
             <button id="sidebar-toggle" class="sidebar-toggle">☰</button>
             <div class="sidebar-content">
-                <div class="sidebar-section">
-                    <h3>Reading Mode</h3>
-                    <div class="btn-group">
-                        <button id="btn-flow">▶ Start Flow</button>
-                    </div>
-                    <div class="btn-group">
-                        <button id="btn-bionic">Bionic</button>
-                    </div>
-                </div>
-
-                <div class="sidebar-section">
-                    <h3>Flow Controls</h3>
-                    <div class="control-group">
-                        <label>Speed <span class="control-value" id="speed-value">300 WPM</span></label>
-                        <input type="range" id="speed-slider" min="100" max="600" value="300">
-                    </div>
-                    <div class="control-group">
-                        <label>Focus Width <span class="control-value" id="focus-value">2</span></label>
-                        <input type="range" id="focus-slider" min="1" max="5" value="2">
-                    </div>
-                    <div class="control-group">
-                        <label>Scroll Level <span class="control-value" id="scroll-value">1</span></label>
-                        <input type="range" id="scroll-slider" min="1" max="5" value="1">
+                <div class="sidebar-section collapsible">
+                    <h3 class="section-header" data-section="reading-mode">
+                        <span class="section-icon">📖</span>
+                        <span>Reading Mode</span>
+                        <span class="collapse-arrow">▼</span>
+                    </h3>
+                    <div class="section-content" data-content="reading-mode">
+                        <div class="btn-group">
+                            <button id="btn-flow">▶ Start Flow</button>
+                        </div>
+                        <div class="btn-group">
+                            <button id="btn-bionic">Bionic</button>
+                        </div>
                     </div>
                 </div>
 
-                <div class="sidebar-section">
-                    <h3>Typography</h3>
-                    <div class="control-group">
-                        <label>Font Family</label>
-                        <select id="font-select">
-                            <optgroup label="Serif">
-                                <option value="georgia" selected>Georgia</option>
-                                <option value="merriweather">Merriweather</option>
-                                <option value="lora">Lora</option>
-                                <option value="crimson">Crimson Pro</option>
-                                <option value="baskerville">Libre Baskerville</option>
-                            </optgroup>
-                            <optgroup label="Sans Serif">
-                                <option value="inter">Inter</option>
-                                <option value="opensans">Open Sans</option>
-                                <option value="sourcesans">Source Sans 3</option>
-                                <option value="nunito">Nunito Sans</option>
-                            </optgroup>
-                            <optgroup label="Monospace">
-                                <option value="jetbrains">JetBrains Mono</option>
-                                <option value="fira">Fira Mono</option>
-                            </optgroup>
-                            <optgroup label="Slab">
-                                <option value="robotoslab">Roboto Slab</option>
-                            </optgroup>
-                            <optgroup label="Accessibility">
-                                <option value="lexend">Lexend (ADHD-friendly)</option>
-                                <option value="opendyslexic">OpenDyslexic (Dyslexia)</option>
-                            </optgroup>
-                        </select>
-                    </div>
-                    <div class="control-group">
-                        <label>Font Size <span class="control-value" id="fontsize-value">18px</span></label>
-                        <input type="range" id="fontsize-slider" min="12" max="48" value="18">
-                    </div>
-                    <div class="control-group">
-                        <label>Line Height <span class="control-value" id="lineheight-value">1.7</span></label>
-                        <input type="range" id="lineheight-slider" min="1.0" max="3.0" step="0.1" value="1.7">
+                <div class="sidebar-section collapsible">
+                    <h3 class="section-header" data-section="flow-controls">
+                        <span class="section-icon">⚡</span>
+                        <span>Flow Controls</span>
+                        <span class="collapse-arrow">▼</span>
+                    </h3>
+                    <div class="section-content collapsed" data-content="flow-controls">
+                        <div class="control-group">
+                            <label>Speed <span class="control-value" id="speed-value">300 WPM</span></label>
+                            <input type="range" id="speed-slider" min="100" max="600" value="300">
+                        </div>
+                        <div class="control-group">
+                            <label>Focus Width <span class="control-value" id="focus-value">2</span></label>
+                            <input type="range" id="focus-slider" min="1" max="5" value="2">
+                        </div>
+                        <div class="control-group">
+                            <label>Scroll Level <span class="control-value" id="scroll-value">1</span></label>
+                            <input type="range" id="scroll-slider" min="1" max="5" value="1">
+                        </div>
                     </div>
                 </div>
 
-                <div class="sidebar-section">
-                    <h3>Layout</h3>
-                    <div class="control-group">
-                        <label>Left Margin <span class="control-value" id="margin-left-value">60px</span></label>
-                        <input type="range" id="margin-left-slider" min="10" max="400" value="60">
-                    </div>
-                    <div class="control-group">
-                        <label>Right Margin <span class="control-value" id="margin-right-value">60px</span></label>
-                        <input type="range" id="margin-right-slider" min="10" max="400" value="60">
+                <div class="sidebar-section collapsible">
+                    <h3 class="section-header" data-section="typography">
+                        <span class="section-icon">🔤</span>
+                        <span>Typography</span>
+                        <span class="collapse-arrow">▼</span>
+                    </h3>
+                    <div class="section-content collapsed" data-content="typography">
+                        <div class="control-group">
+                            <label>Font Family</label>
+                            <select id="font-select">
+                                <optgroup label="Serif">
+                                    <option value="georgia" selected>Georgia</option>
+                                    <option value="merriweather">Merriweather</option>
+                                    <option value="lora">Lora</option>
+                                    <option value="crimson">Crimson Pro</option>
+                                    <option value="baskerville">Libre Baskerville</option>
+                                </optgroup>
+                                <optgroup label="Sans Serif">
+                                    <option value="inter">Inter</option>
+                                    <option value="opensans">Open Sans</option>
+                                    <option value="sourcesans">Source Sans 3</option>
+                                    <option value="nunito">Nunito Sans</option>
+                                </optgroup>
+                                <optgroup label="Monospace">
+                                    <option value="jetbrains">JetBrains Mono</option>
+                                    <option value="fira">Fira Mono</option>
+                                </optgroup>
+                                <optgroup label="Slab">
+                                    <option value="robotoslab">Roboto Slab</option>
+                                </optgroup>
+                                <optgroup label="Accessibility">
+                                    <option value="lexend">Lexend (ADHD-friendly)</option>
+                                    <option value="opendyslexic">OpenDyslexic (Dyslexia)</option>
+                                </optgroup>
+                            </select>
+                        </div>
+                        <div class="control-group">
+                            <label>Font Size <span class="control-value" id="fontsize-value">18px</span></label>
+                            <input type="range" id="fontsize-slider" min="12" max="48" value="18">
+                        </div>
+                        <div class="control-group">
+                            <label>Line Height <span class="control-value" id="lineheight-value">1.7</span></label>
+                            <input type="range" id="lineheight-slider" min="1.0" max="3.0" step="0.1" value="1.7">
+                        </div>
                     </div>
                 </div>
 
-                <div class="sidebar-section">
-                    <h3>Theme</h3>
-                    <div class="control-group">
-                        <label>Color Scheme</label>
-                        <select id="theme-select">
-                            <optgroup label="Light Themes">
-                                <option value="light" selected>Light</option>
-                                <option value="sepia">Sepia</option>
-                                <option value="gray">Gray</option>
-                                <option value="parchment">Parchment</option>
-                            </optgroup>
-                            <optgroup label="Dark Themes">
-                                <option value="dark">Dark</option>
-                                <option value="nord">Nord</option>
-                                <option value="dracula">Dracula</option>
-                                <option value="solarized">Solarized Dark</option>
-                                <option value="monokai">Monokai</option>
-                                <option value="ocean">Ocean Blue</option>
-                                <option value="forest">Forest</option>
-                            </optgroup>
-                            <optgroup label="Special">
-                                <option value="matrix">Matrix</option>
-                                <option value="terminal">Terminal Green</option>
-                            </optgroup>
-                        </select>
+                <div class="sidebar-section collapsible">
+                    <h3 class="section-header" data-section="layout">
+                        <span class="section-icon">📐</span>
+                        <span>Layout</span>
+                        <span class="collapse-arrow">▼</span>
+                    </h3>
+                    <div class="section-content collapsed" data-content="layout">
+                        <div class="control-group">
+                            <label>Left Margin <span class="control-value" id="margin-left-value">60px</span></label>
+                            <input type="range" id="margin-left-slider" min="10" max="400" value="60">
+                        </div>
+                        <div class="control-group">
+                            <label>Right Margin <span class="control-value" id="margin-right-value">60px</span></label>
+                            <input type="range" id="margin-right-slider" min="10" max="400" value="60">
+                        </div>
                     </div>
-                    <div class="control-group">
-                        <label style="display: flex; align-items: center; gap: 8px;">
-                            <input type="checkbox" id="theme-auto">
-                            <span>Auto (System)</span>
-                        </label>
+                </div>
+
+                <div class="sidebar-section collapsible">
+                    <h3 class="section-header" data-section="theme">
+                        <span class="section-icon">🎨</span>
+                        <span>Theme</span>
+                        <span class="collapse-arrow">▼</span>
+                    </h3>
+                    <div class="section-content collapsed" data-content="theme">
+                        <div class="control-group">
+                            <label>Color Scheme</label>
+                            <select id="theme-select">
+                                <optgroup label="Light Themes">
+                                    <option value="light" selected>Light</option>
+                                    <option value="sepia">Sepia</option>
+                                    <option value="gray">Gray</option>
+                                    <option value="parchment">Parchment</option>
+                                </optgroup>
+                                <optgroup label="Dark Themes">
+                                    <option value="dark">Dark</option>
+                                    <option value="nord">Nord</option>
+                                    <option value="dracula">Dracula</option>
+                                    <option value="solarized">Solarized Dark</option>
+                                    <option value="monokai">Monokai</option>
+                                    <option value="ocean">Ocean Blue</option>
+                                    <option value="forest">Forest</option>
+                                </optgroup>
+                                <optgroup label="Special">
+                                    <option value="matrix">Matrix</option>
+                                    <option value="terminal">Terminal Green</option>
+                                </optgroup>
+                            </select>
+                        </div>
+                        <div class="control-group">
+                            <label style="display: flex; align-items: center; gap: 8px;">
+                                <input type="checkbox" id="theme-auto">
+                                <span>Auto (System)</span>
+                            </label>
+                        </div>
                     </div>
                 </div>
             </div>
