Added paste text button

--- a/bionic.html
+++ b/bionic.html
@@ -23,6 +23,7 @@
                 <div class="upload-section">
                     <input type="file" id="epub-upload" accept=".epub" style="display: none;">
                     <button id="upload-btn" class="upload-btn">Upload EPUB</button>
+                    <button id="paste-btn" class="upload-btn paste-btn">Paste Text</button>
                 </div>
 
                 <div class="chapters-list" id="chapters-list">
