--- a/bionic.html
+++ b/bionic.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>EBook Reader v3.0</title>
+    <title>🐆 Cheetah Reader v3.0</title>
     
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="chapters-sidebar.css">
