Changed default theme and font

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <div class="section-content collapsed" data-content="flow-controls">
                         <div class="control-group">
                             <label>Speed <span class="control-value" id="speed-value">300 WPM</span></label>
-                            <input type="range" id="speed-slider" min="100" max="600" value="300">
+                            <input type="range" id="speed-slider" min="100" max="650" value="400">
                         </div>
                         <div class="control-group">
                             <label>Focus Width <span class="control-value" id="focus-value">2</span></label>
@@ -92,7 +92,7 @@
                             <label>Font Family</label>
                             <select id="font-select">
                                 <optgroup label="Serif">
-                                    <option value="georgia" selected>Georgia</option>
+                                    <option value="georgia">Georgia</option>
                                     <option value="merriweather">Merriweather</option>
                                     <option value="lora">Lora</option>
                                     <option value="crimson">Crimson Pro</option>
@@ -113,7 +113,7 @@
                                 </optgroup>
                                 <optgroup label="Accessibility">
                                     <option value="lexend">Lexend (ADHD-friendly)</option>
-                                    <option value="opendyslexic">OpenDyslexic (Dyslexia)</option>
+                                    <option value="opendyslexic" selected>OpenDyslexic (Dyslexia)</option>
                                 </optgroup>
                             </select>
                         </div>
@@ -157,8 +157,8 @@
                             <label>Color Scheme</label>
                             <select id="theme-select">
                                 <optgroup label="Light Themes">
-                                    <option value="light" selected>Light</option>
-                                    <option value="sepia">Sepia</option>
+                                    <option value="light">Light</option>
+                                    <option value="sepia" selected>Sepia</option>
                                     <option value="gray">Gray</option>
                                     <option value="parchment">Parchment</option>
                                 </optgroup>
