--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                             <button id="btn-flow">▶ Start Flow</button>
                         </div>
                         <div class="btn-group">
-                            <button id="btn-bionic">Bionic</button>
+                            <button id="btn-bionic">🐆 BioVision</button>
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
                     </h3>
                     <div class="section-content collapsed" data-content="flow-controls">
                         <div class="control-group">
-                            <label>Speed <span class="control-value" id="speed-value">300 WPM</span></label>
+                            <label>Speed <span class="control-value" id="speed-value">400 WPM</span></label>
                             <input type="range" id="speed-slider" min="100" max="650" value="400">
                         </div>
                         <div class="control-group">
