Updated icon for settings sidebar

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 
         <!-- Right Sidebar: Settings -->
         <div id="sidebar">
-            <button id="sidebar-toggle" class="sidebar-toggle">☰</button>
+            <button id="sidebar-toggle" class="sidebar-toggle">⚙️</button>
             <div class="sidebar-content">
                 <div class="sidebar-section collapsible">
                     <h3 class="section-header" data-section="reading-mode">
