--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <button id="chapters-toggle" class="chapters-toggle">☰</button>
             <div class="chapters-content">
                 <div class="book-metadata">
-                    <div class="book-cover-placeholder">📖</div>
+                    <div class="book-cover-placeholder">🐆</div>
                     <h2 id="book-title">No Book Loaded</h2>
                     <p id="book-author">Upload an EPUB to begin</p>
                 </div>
