Step 1: StateManager.js

--- a/index.html
+++ b/index.html
@@ -197,6 +197,9 @@
     <script src="https://cdn.jsdelivr.net/npm/dompurify@3.3.0/dist/purify.min.js"></script>
 
     <!-- App Scripts - LOAD IN THIS ORDER -->
+    <!-- 0. State Manager (NEW - Step 1) -->
+    <script src="StateManager.js"></script>
+    
     <!-- 1. Core utilities and constants -->
     <script src="ebook-reader-core.js"></script>
     
