Steps 11A-11E: ThemeService handles all theme logic

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
     
     <!-- 0.1. Services (Steps 10+) -->
     <script src="FontService.js"></script>
+    <script src="ThemeService.js"></script>
     
     <!-- 1. Core utilities and constants -->
     <script src="ebook-reader-core.js"></script>
