--- a/index.html
+++ b/index.html
@@ -200,6 +200,9 @@
     <script src="FontService.js"></script>
     <script src="ThemeService.js"></script>
     <script src="EPUBService.js"></script>
+    <!-- STEP 16: Core modules -->
+    <script src="WordTracker.js"></script>
+    
     <script src="ebook-reader-core.js"></script>
     <script src="ebook-reader-engine.js"></script>
     <script src="ebook-reader-api.js"></script>
