Step 16D-E: Extract Renderer module from engine

--- a/index.html
+++ b/index.html
@@ -202,6 +202,7 @@
     <script src="EPUBService.js"></script>
     <!-- STEP 16: Core modules -->
     <script src="WordTracker.js"></script>
+    <script src="Renderer.js"></script>
     
     <script src="ebook-reader-core.js"></script>
     <script src="ebook-reader-engine.js"></script>
