--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@
     <!-- STEP 16: Core modules -->
     <script src="WordTracker.js"></script>
     <script src="Renderer.js"></script>
+    <script src="Animator.js"></script>
     
     <script src="ebook-reader-core.js"></script>
     <script src="ebook-reader-engine.js"></script>
