--- a/index.html
+++ b/index.html
@@ -195,6 +195,11 @@
     <script src="https://cdn.jsdelivr.net/npm/dompurify@3.3.0/dist/purify.min.js"></script>
 
     <!-- App Scripts - LOAD IN THIS ORDER -->
+    <!-- STEP 17: Configuration files -->
+    <script src="config/fonts.js"></script>
+    <script src="config/themes.js"></script>
+    <script src="config/defaults.js"></script>
+    
     <!-- STEP 14C: Added CheetahReaderApp before app.js -->
     <script src="StateManager.js"></script>
     <script src="FontService.js"></script>
