Chapter Navigation Buttons

--- a/index.html
+++ b/index.html
@@ -37,6 +37,12 @@
             <div class="margin-drag-zone margin-drag-zone-left" id="drag-left"></div>
             <div class="margin-drag-zone margin-drag-zone-right" id="drag-right"></div>
             <div id="reader"></div>
+            
+            <!-- Chapter Navigation Bar -->
+            <div id="chapter-nav-bar" class="chapter-nav-bar" style="display: none;">
+                <button id="prev-chapter-btn" class="chapter-nav-btn">← Previous</button>
+                <button id="next-chapter-btn" class="chapter-nav-btn">Next →</button>
+            </div>
         </div>
 
         <!-- Right Sidebar: Settings -->
