Added bionic strength slider

--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
                             <label>Scroll Level <span class="control-value" id="scroll-value">1</span></label>
                             <input type="range" id="scroll-slider" min="1" max="5" value="1">
                         </div>
+                        <div class="control-group">
+                            <label>Bionic Strength <span class="control-value" id="bionic-strength-value">50%</span></label>
+                            <input type="range" id="bionic-strength-slider" min="20" max="70" value="50">
+                        </div>
                     </div>
                 </div>
 
@@ -136,7 +140,7 @@
 
                 <div class="sidebar-section collapsible">
                     <h3 class="section-header" data-section="layout">
-                        <span class="section-icon">📏</span>
+                        <span class="section-icon">📐</span>
                         <span>Layout</span>
                         <span class="collapse-arrow">▼</span>
                     </h3>
