Added settings persistence across sessions

--- a/index.html
+++ b/index.html
@@ -212,6 +212,7 @@
     
     <!-- STEP 14C: Added CheetahReaderApp before app.js -->
     <script src="StateManager.js"></script>
+    <script src="SettingsPersistence.js"></script>
     <script src="FontService.js"></script>
     <script src="ThemeService.js"></script>
     <script src="EPUBService.js"></script>
