Added reset settings

--- a/index.html
+++ b/index.html
@@ -193,6 +193,9 @@
                                 <span>Auto (System)</span>
                             </label>
                         </div>
+                        <div class="btn-group">
+                            <button id="reset-settings-btn" class="reset-btn" title="Reset all settings to defaults">🔄 Reset Settings</button>
+                        </div>
                     </div>
                 </div>
             </div>
