--- a/index.html
+++ b/index.html
@@ -4,7 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>🐆 Cheetah Reader v3.0</title>
-    
+
+    <!-- Reader Engine CSS (framework-agnostic bubble) -->
+    <link rel="stylesheet" href="reader-engine.css">
+    <!-- App UI CSS (outer interface) -->
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="chapters-sidebar.css">
 </head>
