--- a/index.html
+++ b/index.html
@@ -231,6 +231,8 @@
     <script src="ebook-reader-engine.js"></script>
     <script src="ebook-reader-api.js"></script>
     <script src="CheetahReaderApp.js"></script>
+    <!-- STEP: Phase 4 - UIController handles all UI interactions -->
+    <script src="UIController.js"></script>
     <script src="app.js"></script>
 </body>
 </html>
