--- a/tests/integration-tests.html
+++ b/tests/integration-tests.html
@@ -102,20 +102,20 @@
     <div id="reader-test-container"></div>
 
     <!-- Load dependencies -->
-    <script src="../config/fonts.js"></script>
-    <script src="../config/themes.js"></script>
-    <script src="../ebook-reader-core.js"></script>
-    <script src="../Renderer.js"></script>
-    <script src="../Animator.js"></script>
-    <script src="../WordTracker.js"></script>
-    <script src="../ebook-reader-engine.js"></script>
-    <script src="../ebook-reader-api.js"></script>
-    <script src="../StateManager.js"></script>
-    <script src="../FontService.js"></script>
-    <script src="../ThemeService.js"></script>
-    <script src="../EPUBService.js"></script>
-    <script src="../SettingsPersistence.js"></script>
-    <script src="../CheetahReaderApp.js"></script>
+    <script src="../lib/config/fonts.js"></script>
+    <script src="../lib/config/themes.js"></script>
+    <script src="../lib/ebook-reader-core.js"></script>
+    <script src="../lib/modules/Renderer.js"></script>
+    <script src="../lib/modules/Animator.js"></script>
+    <script src="../lib/modules/WordTracker.js"></script>
+    <script src="../lib/ebook-reader-engine.js"></script>
+    <script src="../lib/ebook-reader-api.js"></script>
+    <script src="../lib/StateManager.js"></script>
+    <script src="../lib/services/FontService.js"></script>
+    <script src="../lib/services/ThemeService.js"></script>
+    <script src="../lib/services/EPUBService.js"></script>
+    <script src="../lib/services/SettingsPersistence.js"></script>
+    <script src="../lib/CheetahReaderApp.js"></script>
 
     <script>
         // Simple test framework
